# Capstone_project

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.api  README.md  docker-compose.yaml  git-workflow.md  mlflow.db  mlops-tracker-notion.csv  mlops-tracker.xlsx  pyproject.toml  requirements.txt  template.py  ~$mlops-tracker.xlsx
.capsproj/: pyvenv.cfg
.capsproj/Scripts/: activate  activate.bat
docs/: engineering_log.md  extra_doc.docx  ~$tra_doc.docx
notebooks/: churn_analysis.ipynb
research/: churn_analysis.ipynb
src/churn_predictor/: api.py  data.py  predict.py  train copy.py  train.py
tests/: test_data.py
